# dissect-monorepo

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pinact.yaml  Dockerfile  README.md  affected_tests.py  centralize_deps.py  centralize_ruff_config.py  decouple_versions.sh  fix_backend_path.py  install_config.sh  internal_deps.py  migrate.sh  project-list  pyproject.toml  ruff.toml  run_pipeline.sh  update_project_src_layout.py
.github/workflows/: integration-tests.yml  lint.yml  unit-tests.yml
config/: Justfile  pyproject.toml  ruff.toml
config/.github/actions/lfs-pull/: action.yml
config/.github/workflows/: build-native-wheels.yml  ci.yml  release-native.yml  release.yml
config/.monorepo/: affected_tests.py  matrix.py  release.sh  release_pure.sh
config/moon/: toolchains.yml  workspace.yml
config/moon/tasks/: all.yml
doc/: recipes.md  release-strategy.md  testing-strategy.md
migrate/: centralize_deps.py  centralize_ruff_config.py  decouple_versions.py  decouple_versions.sh  entrypoint.sh  install_config.sh  internal_deps.py  migrate.sh  project-list  run_pipeline.sh  update_blame_ignore_revs.py  update_docs_conf.py  update_project_src_layout.py  update_readme.py
template/: Justfile  pyproject.toml  ruff.template.toml  ruff.toml
template/.github/workflows/: ci.yml  release-native.yml  release.yml  tooling-ci.yml  tooling-integration-tests.yml  tooling-lint.yml  tooling-unit-tests.yml
template/.monorepo/: affected_tests.py  bump_version.py  docs-check.sh  prepare_native_release.sh  python_versions.py  release_pure.sh  resolve_index.py  resolve_linux_archs.py  ruff.template.toml  run-native-tests.sh  run-tests.sh  set_constraint.py  update_meta_deps.py
template/.monorepo/doc/: folder-layout.md  recipes.md  release-strategy.md  setup.md  testing-strategy.md  tooling.md
template/.monorepo/tests/: conftest.py
template/.monorepo/tests/integration/: test_bump.py  test_bump_auto.py  test_bump_patch.py  test_pending_releases.py  test_release.py
template/.monorepo/tests/unit/: test_affected_tests.py  test_bump_version.py  test_python_versions.py  test_set_constraint.py
template/doc/: dissect-docs-integration.md  folder-layout.md  recipes.md  release-strategy.md  testing-strategy.md
tests/: conftest.py
tests/integration/: helpers.py  test_bump.py  test_bump_auto.py  test_compute_base_ref.py  test_pending_releases.py  test_release.py
tests/unit/: test_affected_tests.py  test_bump_version.py  test_python_versions.py
utils/: README.md  migrate_pr.py
