[project]
name = "dissect-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = ["pytest>=8.4.0", "pytest-xdist>=3"]
dev = ["ruff==0.13.1", "vermin>=1.6.0", "pytest>=8.4.0", "pytest-xdist>=3"]

[tool.uv]
python-downloads = "automatic"

[tool.uv.workspace]
members = ["projects/*"]
