[project]
name = "dissect-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["ruff==0.13.1", "vermin>=1.6.0", "pytest>=8.4.0", "pytest-xdist>=3", "typing_extensions", "packaging>=24", "tomlkit>=0.13"]
docs = ["sphinx>=8,<9", "sphinx-autoapi", "sphinx_argparse_cli", "furo"]

[tool.monorepo.test]
# Pin full versions (e.g. "3.12.13") for full hermeticity.
python-versions = ["3.10", "3.11", "3.12", "3.13", "pypy3.11"]
os = ["ubuntu-latest", "windows-latest"]

[tool.monorepo.native]
# Arch lists for the Linux x86_64 cibuildwheel runner.
# linux-x86-archs-pr  — fast subset (host-only, no QEMU) for push/PR builds.
# linux-x86-archs     — full set (+ QEMU-emulated arches) for nightly/release builds.
linux-x86-archs-pr = ["x86_64", "i686"]
linux-x86-archs = ["x86_64", "i686", "ppc64le", "s390x", "armv7l"]

[tool.monorepo.release]
# Maps release roles to [[tool.uv.index]] names. Releasing to the 'production' index
# creates a git tag and triggers native wheel builds; releasing to the 'test' index is
# an upload-validation dry run only — no tag is created and native wheels are skipped.
production-index = "pypi"
test-index = "testpypi"

# ---------------------------------------------------------------------------
# cibuildwheel — shared config for all native (Rust) projects.
# Run with: cibuildwheel --config-file pyproject.toml projects/<pkg>
# Note that config-settings are overriden in Justfile and should not be used 
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build-frontend = "build"
# PyPy and free-threaded CPython are opt-in.
enable = ["pypy", "pypy-eol", "cpython-freethreading"]
# Musl targets without Rust support; free-threaded handled via override below.
skip = ["*-musllinux_i686", "*-musllinux_ppc64le", "*-musllinux_s390x", "*-musllinux_armv7l"]
test-requires = ["pytest"]
test-command = "pytest --force-native {package}/tests"

[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = {PATH = "$HOME/.cargo/bin:$PATH"}

[tool.cibuildwheel.macos]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable"
environment = {PATH = "$HOME/.cargo/bin:$PATH", MACOSX_DEPLOYMENT_TARGET = "10.12"}

[tool.cibuildwheel.windows]
before-all = "rustup target add i686-pc-windows-msvc"  # only needed for x86; no-op otherwise

[tool.uv]
python-downloads = "automatic"
python-preference = "only-managed"

[tool.uv.workspace]
members = ["projects/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
